frontend/tests/cases/negative/graded/fixCounterExample.gr
fix : forall {a : Type, s : Semiring, r : s} . (a -> a) [r] -> a
fix [f] = f (fix [f])